# rust-libm

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  algorithms.typ
.github/workflows/: main.yml
ci/: run.sh  serialized.sh  unserialized.sh
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile
ci/docker/arm-unknown-linux-gnueabi/: Dockerfile
ci/docker/arm-unknown-linux-gnueabihf/: Dockerfile
ci/docker/armv7-unknown-linux-gnueabihf/: Dockerfile
ci/docker/i686-unknown-linux-gnu/: Dockerfile
ci/docker/mips-unknown-linux-gnu/: Dockerfile
ci/docker/mips64-unknown-linux-gnuabi64/: Dockerfile
ci/docker/mips64el-unknown-linux-gnuabi64/: Dockerfile
ci/docker/mipsel-unknown-linux-gnu/: Dockerfile
ci/docker/powerpc-unknown-linux-gnu/: Dockerfile
ci/docker/powerpc64-unknown-linux-gnu/: Dockerfile
ci/docker/powerpc64le-unknown-linux-gnu/: Dockerfile
ci/docker/riscv64gc-unknown-linux-gnu/: Dockerfile
crates/libm-test/: Cargo.toml
crates/libm-test/examples/: plot_domains.rs  plots.rs
crates/libm-test/src/: domain.rs  f8_impl.rs  func.rs  gen.rs  lib.rs  mpfloat.rs  num.rs  num_traits.rs  rug_traits.rs  run_cfg.rs  test_traits.rs
crates/libm-test/tests/: check_coverage.rs  compare_built_musl.rs  infinite_precision.rs  mpfr_core_math_wc.rs  multiprecision.rs
crates/test-support/: Cargo.toml
crates/util/: Cargo.toml
crates/util/src/: main.rs  serialized_tests.rs  test_tofrom_file.rs  traits.rs
etc/: function-definitions.json  plots.jl
src/: lib.rs
src/math/: cbrt.rs  cos.rs  fmaf16.rs  hypot.rs  mod.rs  traits.rs
src/math/generic/: cbrt.rs  (+2 more)
(+8 files in other folders)
