[package]
name = "libm-test"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []

# Generate tests which are random inputs and the outputs are calculated with
# musl libc.
musl-bitwise-tests = ["rand"]
multiprecision-tests = ["dep:az", "dep:rug"]

[dependencies]
az = { version = "1.2.1", optional = true }
libm = { path = "../.." }
libm-macros = { path = "../libm-macros" }
paste = "1.0.15"
rug = { version = "1.26.1", optional = true, default-features = false, features = ["float", "std"] }

# We can't build musl on MSVC or wasm
[target.'cfg(not(any(target_env = "msvc", target_family = "wasm", target_feature = "thumb-mode")))'.dependencies]
musl-math-sys = { path = "../musl-math-sys" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[build-dependencies]
rand = { version = "0.8.5", optional = true }
